fix footer rendering on mobile

--- a/less/components/_footer.less
+++ b/less/components/_footer.less
@@ -47,6 +47,10 @@
   @media (min-width: @screen-md-min) {
     text-align: right;
   }
+
+  @media (max-width: @screen-sm-max) {
+    margin: 1em 0;
+  }
 }
 
 .uniritter-symbol{
